[package]
name = "example-arbos"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unreachable_pub = "warn"
unused_must_use = "deny"
rust_2018_idioms = "deny"

[lints.rustdoc]
all = "warn"

[dependencies]
revm = { workspace = true, features = ["std"] }
database.workspace = true
revm-arbos = { workspace = true, features = ["std"]}
alloy-sol-types = { version = "0.8.2", default-features = false, features = [
    "std",
] }

# mics
anyhow = "1.0.89"
